--- a/tp2.ipynb
+++ b/tp2.ipynb
@@ -16,7 +16,8 @@
    },
    "source": [
     "# 2. Membros\n",
-    "- **Luís Eduardo Limas Brito**: 2023102329"
+    "- **Luís Eduardo Limas Brito**: 2023102329\n",
+    "- **Felipe Araujo Melo**: 2023027947"
    ]
   },
   {
@@ -285,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Leitura do Arquivo CVS"
+    "## Leitura do Arquivo CSV"
    ]
   },
   {
