Pagina com Informacoes Basicas Adicionada

--- a/tp2.ipynb
+++ b/tp2.ipynb
@@ -17,7 +17,8 @@
    "source": [
     "# 2. Membros\n",
     "- **Luís Eduardo Limas Brito**: 2023102329\n",
-    "- **Felipe Araujo Melo**: 2023027947"
+    "- **Felipe Araujo Melo**: 2023027947\n",
+    "- **Natanael dos Santos Júnior**: 2023087842"
    ]
   },
   {
