--- a/tp2.ipynb
+++ b/tp2.ipynb
@@ -18,7 +18,8 @@
     "# 2. Membros\n",
     "- **Luís Eduardo Limas Brito**: 2023102329\n",
     "- **Felipe Araujo Melo**: 2023027947\n",
-    "- **Natanael dos Santos Júnior**: 2023087842"
+    "- **Natanael dos Santos Júnior**: 2023087842\n",
+    "- **Ulisses Drumond Souza Rosa**: 2023028161"
    ]
   },
   {
