--- a/tp2.ipynb
+++ b/tp2.ipynb
@@ -2240,13 +2240,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Autoavaliação dos membros"
+    "# 7. Autoavaliação dos membros\n",
+    "\n",
+    "### Felipe Melo:\n",
+    "Nesse trabalho prático fiquei encarregado de lidar com 5 consultas e implementar a parte extra.\n",
+    "Acredito que desempenhei um bom trabalho pois todos os membros gostaram do resultado final do trabalho\n",
+    "com a implementação do streamlit.\n",
+    "\n",
+    "### Luís Eduardo:\n",
+    "A minha parte no trabalho foi ler os dados da base de dados e montar as tabelas. Esse trabalho\n",
+    "foi um bocado complicado pois a base de dados estava um pouco \"desorganizada\". Entretanto \n",
+    "no fim foi possível montar um banco de dados seguindo os relacionamentos propostos no esquema ER.\n",
+    "Gostei muito de ficar com essa tarefa, uma vez que foi possível botar em prática vários dos conceitos\n",
+    "aprendidos na disciplina. Todo mundo no grupo gostou da minha parte.\n",
+    "\n",
+    "### Nathanael dos Santos:\n",
+    "Eu fiquei com a parte de fazer 5 consultas e montar a documentação. Explicar as consultas de forma sucinta\n",
+    "se mostrou um desafio, uma vez que o código por trás era tão complicado quanto a consulta. Por isso a comunicação\n",
+    "entre nós foi crucial para a realização dessa tarefa. Além disso, eu também tive que explicar as minucias do\n",
+    "nosso trabalho. Fiquei satisfeito com o meu desempenho.\n",
+    "\n",
+    "### Ulisses Rosa:\n",
+    "No trabalho em questão a minha parte foi escolher o banco de dados e fazer o diagrama ER junto com a normalização das tabelas.\n",
+    "Montar o diagrama ER foi desafiador pois interpretar a base de dados que escolhemos foi uma tarefa bem difícil.\n",
+    "Gostei bastante do resultado do meu trabalho e também do resultado do trabalho dos outros membros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8 Streamlit\n",
+    "\n",
+    "\n",
+    "  Criamos uma versão desse trabalho em formato de aplicação StreamLit, contendo as consultas já feitas e extras onde o usúario é capaz de escolher as informações relevantes para ele.\n",
+    "\n",
+    "  **Link:** https://tp2-ibd-movimentacao-2021.streamlit.app/"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2260,7 +2295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
